boreal/tests/assets/invalid_files/parsing/string_modifier_duplicated3.yar
// [error: string modifier base64 appears multiple times]
rule a {
    strings:
        $a = "a" base64 xor base64
}
